<ul>
	<li>V0.9.3 Devel
  	<ul>
		<li>2003-09-26 HS - Handle Primary Key comments correctly.
		<li>2003-09-24 AP - rule condition fix
		<li>2003-09-26 HS - column quoting when reading pgSet
		<li>2003-09-14 AP - document-here support for pgsql7.5
		<li>2003-09-12 HS - Display and edit check constraint comments properly.
		<li>2003-09-12 HS - Display fkey comments properly.
		<li>2003-09-11 JMP - RPM packages now install pgAdmin3 icon.
		<li>2003-09-11 JMP - SRPM package should rebuild anywhere.
		<li>2003-09-10 AP - correct quoting in dlg Operator, support schema qualified merge ops.
		<li>2003-09-10 AHP - Search for PostgreSQL includes in /usr/include and /usr/include/pgsql.
		<li>2003-09-09 HS/DP - Populate Operator combos properly.
		<li>2003-09-09 HS - Retrieve freshly created conversions correctly.
		<li>2003-09-09 HS - Correctly quote the ANY keyword in aggregate definitions.
		<li>2003-09-09 HS - Fix for casts with created WITHOUT FUNCTION (binary compatible).
		<li>2003-09-09 AP - fix grid for tables with multicolumn pk
		<li>2003-09-08 HS - Don't crash when selecting SQL command help when not connected to a server
		<li>2003-09-08 AP - update query tool toolbar after clipboard cut/copy
		<li>2003-09-08 AP - fix trigger dialog for multiple events
		<li>2003-09-08 AP - export and option dialog partially bigger
		<li>2003-09-06 AP - missed some strings for translation
		<li>2003-09-03 AP - fixing the grid's edit control 
		<li>2003-09-03 AP - enabling menu etc from a collection's properties listview, including a bugfix if the object wasn't expanded and still had a dummy child.
    </ul>
	<li>V0.9.2 Beta
  	<ul>
		<li>2003-09-02 AP - include public trigger functions
		<li>2003-08-29 AP - frmEditGrid: double click on labels resizes column or row
		<li>2003-08-28 AP - handle editor scrolling in frmEditGrid
		<li>2003-08-28 AP - Fix numeric truncation in frmEditGrid
   		<li>2003-08-25 AP - SSL support for win32.