@@ -1,4 +1,9 @@
 <ul>
+	<li>V1.0.0
+  	<ul>
+		<li>2003-09-30 HS - Display new triggers correctly in the treeview.
+		<li>2003-09-30 DP - Allow creation of triggers with functions in schemas not in the search path.
+    	</ul>
 	<li>V0.9.3 Devel
   	<ul>
 		<li>2003-09-26 HS - Handle Primary Key comments correctly.
